--- a/htdocs/template/main/main.html
+++ b/htdocs/template/main/main.html
@@ -18,9 +18,35 @@
 		    #help { width:420px; margin:0 auto; line-height:17px; font-weight:bold;color:#000 }
 		    #help span { float:left; margin-right:10px }
 		    #help .box { width:15px; height:15px; margin-right:5px; border:0px solid #227700;}
-		    #btnStart { font-weight:bold; clear:both; width:420px; margin-left: 0px; height:50px; margin-top:10px;margin-bottom:20px; padding:0; background:#4CAF50; color:#000; border:1px solid #66CDAA; border-bottom-color:#006400; border-right-color:#006400; cursor:pointer }
+		    #btnStart { 
+		    	font-weight:bold; 
+		    	clear:both; 
+		    	width:420px; 
+		    	margin-left: 0px; 
+		    	height:50px; 
+		    	margin-top:10px;
+		    	margin-bottom:20px; 
+		    	padding:0; 
+		    	background:#4CAF50; 
+		    	color:#000; 
+		    	border:1px solid #66CDAA; 
+		    	border-bottom-color:#006400; 
+		    	border-right-color:#006400; 
+		    	cursor:pointer;
+		    	text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff;
+		    }
 		    .btn01{
-		    	font-weight:bold; width:420px; height:30px; background:#4CAF50; color:#000; border:1px solid #66CDAA; border-bottom-color:#006400; border-right-color:#006400; cursor:pointer;text-align:center;
+		    	font-weight:bold; 
+		    	width:420px; 
+		    	height:30px; 
+		    	background:#4CAF50; 
+		    	color:#000; 
+		    	border:1px solid #66CDAA; 
+		    	border-bottom-color:#006400; 
+		    	border-right-color:#006400; 
+		    	cursor:pointer;
+		    	text-align:center;
+		    	text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff;
 		    }
 		</style>
 
@@ -403,7 +429,7 @@
 			    <span class="box brake"></span><span>刹車</span>
 			    <input type="button" class="button" id="btnStart" value="Start"/>
 			</div>
-			<iframe allowTransparency="true" src="/www/main/page/score" width="600px" height="300px" frameborder="0" scrolling="no" name="scoreiframe" id="scoreiframe"></iframe>
+			<iframe allowTransparency="true" src="/www/main/page/score" width="600px" height="320px" frameborder="0" scrolling="no" name="scoreiframe" id="scoreiframe"></iframe>
 		</div>
 		<div id="div2" style="float:right;width:40%;height:280px;text-align:center;line-height:80px;">
 			<iframe allowTransparency="true" src="/www/main/page/rank" width="600px" height="600px" frameborder="0" scrolling="no" name="rankiframe" id="rankiframe"></iframe>
