--- a/htdocs/template/main/rank.html
+++ b/htdocs/template/main/rank.html
@@ -51,7 +51,7 @@
 					</tr>
 					{{foreach from=$scorelist item=item}}
 					{{$idx=$idx+1}}
-					<tr>
+					<tr {{if ($item.player_id==$player_id)}}style="background:rgba(255,255,0,0.6);"{{/if}}>
 						<td align="cneter" nowrap><strong><font class="text">{{$idx}}</font></strong></td>
 						<td align="cneter" nowrap><strong><font class="text">{{$item.player_nm}}</font></strong></td>
 						<td align="cneter"><strong><font class="text">{{$item.score}}</font></strong></td>
