--- a/htdocs/template/main/score.html
+++ b/htdocs/template/main/score.html
@@ -32,7 +32,7 @@
 			<div class="container">
 				<table class="table" border="0">
 					<tr>
-						<td colspan="3"><font class="text">★★★Record★★★</font></td>
+						<td colspan="3"><font class="text" style="font-size: 52px;">★★★Record★★★</font></td>
 					</tr>
 					{{$idx=0}}
 					<tr>
